# prufen

./: .travis.yml  CMakeLists.txt  README.md
include/prufen/: append.h  around.h  assertion.h  colors.h  comparable.h  expect_macros.h  format.h  main.h  operands.h  options.h  pre_main.h  prufen.h  restrict_include.h  result.h  symbols.h  test.h  test_define.h  test_executers.h  testcase.h  testcase_set.h  types.h
include/sweetgreen/: append.h  around.h  assertion.h  colors.h  comparable.h  expect_macros.h  format.h  main.h  operands.h  options.h  pre_main.h  restrict_include.h  result.h  sweetgreen.h  symbols.h  test.h  test_case.h  test_case_set.h  test_define.h  test_executers.h  testcase.h  testcase_set.h  types.h
test/: CMakeLists.txt  run_test.bash  run_tests.bash  run_tests.sh  shouldfail_address.c  shouldfail_bool.c  shouldfail_equal.c  shouldfail_memory.c  shouldfail_null.c  shouldfail_segfault.c  shouldfail_string.c  shouldfail_zero.c  shouldpass_address.c  shouldpass_bool.c  shouldpass_equal.c  shouldpass_memory.c  shouldpass_null.c  shouldpass_string.c  shouldpass_zero.c
